[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/UpgradeItem.gd" type="Script" id=2]
[ext_resource path="res://Graphics/UI/Coin_icon.png" type="Texture" id=3]
[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://Graphics/UI/FrameUpgradeSmall.png" type="Texture" id=5]
[ext_resource path="res://Graphics/UI/FrameUpgradeBig.png" type="Texture" id=6]

[node name="UpgradeItem" type="Control"]
anchor_right = 0.333
anchor_bottom = 0.267
margin_right = 180.1
margin_bottom = -0.0750046
rect_min_size = Vector2( 280, 60 )
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
Icon = ExtResource( 1 )
Title = "Title"
Price = 10

[node name="LeftPanel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -162.0
margin_bottom = -2.0
rect_min_size = Vector2( 116, 56 )
color = Color( 0, 0, 0, 0.243137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="LeftPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 9.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 29.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="LeftPanel"]
margin_left = 73.0
margin_top = 30.0
margin_right = 112.0
margin_bottom = 50.0
focus_mode = 0
enabled_focus_mode = 0
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="LeftPanel"]
margin_left = 4.0
margin_top = 14.0
margin_right = 68.0
margin_bottom = 78.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="TextureRect" parent="LeftPanel"]
margin_left = 103.019
margin_top = 16.622
margin_right = 115.019
margin_bottom = 33.622
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LeftPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 15.0
text = "Title"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameUpgradeSmall" type="Sprite" parent="."]
position = Vector2( 60, 30 )
texture = ExtResource( 5 )

[node name="RightPanel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 127.0
margin_top = 1.0
margin_right = -7.0
margin_bottom = -3.0
rect_min_size = Vector2( 146, 56 )
color = Color( 0, 0, 0, 0.243137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="Label" parent="RightPanel"]
margin_left = 3.0
margin_top = 1.0
margin_right = 115.0
margin_bottom = 15.0
text = "Current value :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="RightPanel"]
margin_left = 118.0
margin_top = 1.0
margin_right = 145.0
margin_bottom = 15.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="RightPanel"]
margin_left = 4.0
margin_top = 18.0
margin_right = 236.0
margin_bottom = 76.0
rect_scale = Vector2( 0.6, 0.6 )
text = "Lorem ipsum "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameUpgradeBig" type="Sprite" parent="."]
position = Vector2( 200, 29 )
texture = ExtResource( 6 )

[connection signal="pressed" from="LeftPanel/BuyButton" to="." method="_on_BuyButton_pressed"]
